--- a/_posts/2021-07-25-dp-in-mdp.markdown
+++ b/_posts/2021-07-25-dp-in-mdp.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Dynamic Programming Algorithms For Solving Markov Decision Processes"
+title:  "Dynamic Programming Algorithms for Solving Markov Decision Processes"
 date:   2021-07-25 15:30:00 +0700
 categories: [artificial-intelligent, reinforcement-learning]
 tags: artificial-intelligent reinforcement-learning dynamic-programming my-rl
