--- a/_posts/2021-07-25-dp-in-mdp.markdown
+++ b/_posts/2021-07-25-dp-in-mdp.markdown
@@ -16,8 +16,8 @@ comments: true
 	- [Policy Improvement](#policy-improvement)
 	- [Policy Iteration](#policy-iteration)
 	- [Value Iteration](#value-iteration)
+        - [Example - Gambler's Problem](#example)
 	- [Generalized Policy Iteration](#gpi)
-	- [Example - Gambler's Problem](#example)
 - [References](#references)
 - [Footnotes](#footnotes)
 
@@ -116,6 +116,14 @@ This algorithm is called **policy iteration**. And here is the pseudocode of the
 	<figcaption></figcaption>
 </figure>
 
+An example of using policy iteration on the Jack's rental problem ([**RL book - example 4.2**](#rl-book))
+
+<figure>
+    <img src="/assets/images/2021-07-25/jackscar.png" alt="Using policy iteration on Jack's car rental problem" style="display: block; margin-left: auto; margin-right: auto;"/>
+    <figcaption style="text-align: center;font-style: italic;"><b>Figure 3</b>: Policy Iteration on Jack's car rental task. The code can be found <span markdown="1">[here](https://github.com/trunghng/reinforcement-learning-an-introduction-imp/blob/main/chapter-4/jackscar.py)</span></figcaption>
+</figure><br/>
+
+
 ### Value Iteration
 When using *policy iteration*, each of its iterations involves policy evaluation, which requires multiple sweeps through the state set, and thus affects the computation performance.  
 Policy evaluation step of policy iteration, in fact, can be truncated in several ways without losing the convergence guarantees of policy iteration. One important special case is when policy evaluation is stopped after just one sweep (one update of each state). This algorithm is called **value iteration**, which follows this update:
@@ -126,33 +134,18 @@ for all $s\in\mathcal{S}$. Once again, thanks to [Banach's fixed point theorem](
 We have the backup diagram for this update[^3].
 <figure>
 	<img src="/assets/images/2021-07-25/backup-value-iteration.png" alt="Backup diagram of value iteration update" style="display: block; margin-left: auto; margin-right: auto; width: 360px; height: 200px"/>
-	<figcaption style="text-align: center;font-style: italic;"><b>Figure 3</b>: Backup diagram of Value Iteration update</figcaption>
+	<figcaption style="text-align: center;font-style: italic;"><b>Figure 4</b>: Backup diagram of Value Iteration update</figcaption>
 </figure><br/>
+
 And here is the pseudocode of the value iteration.
 <figure>
 	<img src="/assets/images/2021-07-25/value-iteration.png" alt="value iteration pseudocode" style="display: block; margin-left: auto; margin-right: auto;"/>
 	<figcaption></figcaption>
 </figure>
 
-### Generalized Policy Iteration
-{: #gpi}
-The **Generalized Policy Iteration (GPI)** algorithm refers to the idea of combining policy evaluation and policy improvement together to improve the original policy.  
-In GPI, the value function is repeatedly driven toward the true value of the current policy and at the same time the policy is being improved optimality with respect to its value function, as in the following diagram.
-<figure>
-	<img src="/assets/images/2021-07-25/gpi.png" alt="GPI" style="display: block; margin-left: auto; margin-right: auto; width:200px; height: 320px"/>
-	<figcaption style="text-align: center;font-style: italic;"><b>Figure 4</b>: Generalized Policy Iteration</figcaption>
-</figure><br/>
-
-Once it reaches the stationary state (when both evaluation and improvement no long produce any updates), then the current value function and policy must be optimal.  
-The evaluation and improvement processes in GPI can be viewed as both competing and cooperating. They competing in the sense that on the one hand, making policy greedy w.r.t the value function typically makes value function incorrect for the new policy. And on the other hand, approximating the value function closer to the true value of the policy typically forces the policy is no longer to be greedy. But in the long run, they two processes cooperate to find a single joint solution: the optimal value function and an optimal policy.
-<figure>
-	<img src="/assets/images/2021-07-25/gpi-rel.png" alt="GPI interaction" style="display: block; margin-left: auto; margin-right: auto; width: 360px; height: 200px"/>
-	<figcaption style="text-align: center;font-style: italic;"><b>Figure 5</b>: Interaction between the evaluation and improvement processes in GPI</figcaption>
-</figure>
-
-### Example - Gambler's Problem
+#### Example - Gambler's Problem
 {: #example}
-(This example is taken from *Reinforcement Learning: An Introduction* book, *Example 4.3*.)  
+(This example is taken from [**RL book - example 4.3**](#rl-book)).  
 
 Let's say you are a gambler, who decides to bet on the outcomes of sequence of coin flips. On each flip, you have to decide how many dollars, in integer, you will bet. Each time you win, when the coin comes up head, the amount of money you get is exactly the same as the money that you staked on that flip. Same it goes in the tail case, you will lose that amount of dollars. The game ends when you reach your goal, let's assume, $\\$100$, or when your hands are empty, $\\$0$. This task can be formulated as undiscounted, episodic, finite MDP. The state is your capital, $s\in\\{1,2,\dots,99\\}$; the actions are stakes, $a\in\\{0,1,\dots,\min\left(s,100-s\right)\\}$. The reward is zero on all trainsitions except those on which you reach your goal, when it is $+1$.
 And we also assume that the probability of the coin coming up heads, $p_h=0.4$.
@@ -247,11 +240,27 @@ if __name__ == '__main__':
 And here is our results after running the code
 <figure>
     <img src="/assets/images/2021-07-25/gambler.png" alt="gambler" style="display: block; margin-left: auto; margin-right: auto; width: 450px; height: 900px"/>
-    <figcaption style="text-align: center;font-style: italic;"><b>Figure 7</b>: Example - Gambler's Problem Result</figcaption>
+    <figcaption style="text-align: center;font-style: italic;"><b>Figure 5</b>: Gambler's Problem solved by Value Iteration Result</figcaption>
+</figure>
+
+### Generalized Policy Iteration
+{: #gpi}
+The **Generalized Policy Iteration (GPI)** algorithm refers to the idea of combining policy evaluation and policy improvement together to improve the original policy.  
+In GPI, the value function is repeatedly driven toward the true value of the current policy and at the same time the policy is being improved optimality with respect to its value function, as in the following diagram.
+<figure>
+	<img src="/assets/images/2021-07-25/gpi.png" alt="GPI" style="display: block; margin-left: auto; margin-right: auto; width:200px; height: 320px"/>
+	<figcaption style="text-align: center;font-style: italic;"><b>Figure 6</b>: Generalized Policy Iteration</figcaption>
+</figure><br/>
+
+Once it reaches the stationary state (when both evaluation and improvement no long produce any updates), then the current value function and policy must be optimal.  
+The evaluation and improvement processes in GPI can be viewed as both competing and cooperating. They competing in the sense that on the one hand, making policy greedy w.r.t the value function typically makes value function incorrect for the new policy. And on the other hand, approximating the value function closer to the true value of the policy typically forces the policy is no longer to be greedy. But in the long run, they two processes cooperate to find a single joint solution: the optimal value function and an optimal policy.
+<figure>
+	<img src="/assets/images/2021-07-25/gpi-rel.png" alt="GPI interaction" style="display: block; margin-left: auto; margin-right: auto; width: 360px; height: 200px"/>
+	<figcaption style="text-align: center;font-style: italic;"><b>Figure 7</b>: Interaction between the evaluation and improvement processes in GPI</figcaption>
 </figure>
 
 ## References
-[1] Richard S. Sutton & Andrew G. Barto. [Reinforcement Learning: An Introduction](https://mitpress.mit.edu/books/reinforcement-learning-second-edition).  
+[1] <span id='rl-book'>Richard S. Sutton & Andrew G. Barto. [Reinforcement Learning: An Introduction](https://mitpress.mit.edu/books/reinforcement-learning-second-edition).</span>  
 
 [2] David Silver. [UCL course on RL](https://www.davidsilver.uk/teaching/).  
 
