--- a/_posts/2022-10-07-nes.markdown
+++ b/_posts/2022-10-07-nes.markdown
@@ -13,6 +13,8 @@ eqn-number: true
 <!-- excerpt-end -->
 - [Search gradients](#search-grad)
 	- [Search gradients for MVN](search-grad-gauss)
+	- [Natural gradient](ntr-grad)
+- [Fitness shaping](#fn-shp)
 - [References](#references)
 - [Footnotes](#footnotes)
 
@@ -24,7 +26,7 @@ To utilize the use all fitness samples, the **NES** uses **search gradients** in
 
 Let $\mathbf{z}\in\mathbb{R}^n$ denote the solution sampled from the distribution $\pi(\mathbf{z},\theta)$ and let $f:\mathbb{R}^n\to\mathbb{R}$ be the fitness (or objective) function. The expected fitness value is then given by
 \begin{equation}
-J(\theta)=\mathbb{E}\_\theta[f(\mathbf{z})]=\int f(\mathbf{z})\pi(\mathbf{z}\vert\theta)\,d\mathbf{z}
+J(\theta)=\mathbb{E}\_\theta[f(\mathbf{z})]=\int f(\mathbf{z})\pi(\mathbf{z}\vert\theta)\,d\mathbf{z}\label{eq:sg.1}
 \end{equation}
 Taking the gradient of the above function w.r.t $\theta$ using the **log-likelihood trick** as in [REINFORCE]({% post_url 2022-05-04-policy-gradient %}#reinforce) gives us
 \begin{align}
@@ -36,7 +38,7 @@ Using Monte Carlo method, given samples $\mathbf{z}\_1,\ldots,\mathbf{z}\_\lambd
 \end{equation}
 Given this gradient w.r.t $\theta$, we then can use a gradient-based method to repeatedly update the parameter $\theta$ in order to give us a more desired search distribution. In particular, we can use such as SGD method
 \begin{equation}
-\theta\leftarrow\theta+\alpha\nabla_\theta J(\theta),\label{eq:sg.1}
+\theta\leftarrow\theta+\alpha\nabla_\theta J(\theta),\label{eq:sg.2}
 \end{equation}
 where $\alpha$ is the learning rate.
 
@@ -60,15 +62,37 @@ And the gradient w.r.t $\boldsymbol{\Sigma}$ is computed as
 \begin{align}
 \nabla_\boldsymbol{\Sigma}\pi(\mathbf{z}\vert\theta)&=\nabla_\boldsymbol{\Sigma}\left(-\frac{n}{2}\log(2\pi)-\frac{1}{2}\log\vert\boldsymbol{\Sigma}\vert-\frac{1}{2}\left(\mathbf{z}-\boldsymbol{\mu}\right)^\text{T}\boldsymbol{\Sigma}^{-1}\left(\mathbf{z}-\boldsymbol{\mu}\right)\right) \\\\ &=-\frac{1}{2}\nabla_\boldsymbol{\Sigma}\left(\mathbf{z}-\boldsymbol{\mu}\right)^\text{T}\boldsymbol{\Sigma}^{-1}\left(\mathbf{z}-\boldsymbol{\mu}\right) \\\\ &=\frac{1}{2}\boldsymbol{\Sigma}^{-1}\left(\mathbf{z}-\boldsymbol{\mu}\right)\left(\mathbf{z}-\boldsymbol{\mu}\right)^\text{T}\boldsymbol{\Sigma}^{-1}-\frac{1}{2}\boldsymbol{\Sigma}^{-1}
 \end{align}
-The SGD update \eqref{eq:sg.1} now is applied for each of $\boldsymbol{\mu}$ and $\boldsymbol{\Sigma}$ as
+The SGD update \eqref{eq:sg.2} now is applied for each of $\boldsymbol{\mu}$ and $\boldsymbol{\Sigma}$ as
 \begin{align}
 \boldsymbol{\mu}&\leftarrow\boldsymbol{\mu}+\alpha\nabla_\boldsymbol{\mu}J(\theta) \\\\ &\leftarrow\boldsymbol{\mu}+\alpha\frac{1}{\lambda}\sum_{k=1}^{\lambda}\boldsymbol{\Sigma}^{-1}\left(\mathbf{z}\_k-\boldsymbol{\mu}\right)f(\mathbf{z}\_k)
 \end{align}
 and
 \begin{align}
 \boldsymbol{\Sigma}&\leftarrow\boldsymbol{\Sigma}+\alpha\nabla_\boldsymbol{\Sigma}J(\theta) \\\\ &\leftarrow\boldsymbol{\Sigma}+\alpha\frac{1}{\lambda}\sum_{k=1}^{\lambda}\left[\frac{1}{2}\boldsymbol{\Sigma}^{-1}\left(\mathbf{z}\_k-\boldsymbol{\mu}\right)\left(\mathbf{z}\_k-\boldsymbol{\mu}\right)^\text{T}\boldsymbol{\Sigma}^{-1}-\frac{1}{2}\boldsymbol{\Sigma}^{-1}\right]f(\mathbf{z}\_k)
+\end{align} 
+
+### Natural gradient
+{: #ntr-grad}
+The **natural gradient** searches for the direction based on the distance between distributions $\pi(\mathbf{z}\vert\theta)$ and $\pi(\mathbf{z}\vert\theta')$. One natural measure of distance between probability distributions is the **Kullback-Leibler divergence**, or **KL divergence**.
+
+In other words, our work is to look for the direction of updating gradient, denoted as $\delta\theta$, such that
+\begin{align}
+\max_{\delta\theta}&\,J(\theta+\delta\theta)\approx J(\theta)+\delta\theta^\text{T}\nabla_\theta J \\\\ \text{s.t.}&\,D(\theta+\delta\theta\Vert\theta)=\varepsilon,
+\end{align}
+where $J(\theta)$ is given as in \eqref{eq:sg.1}; $\varepsilon$ is a small increment size; and where $D(\theta+\delta\theta\Vert\theta)$ is the KL divergence of $\pi(\mathbf{z}\vert\theta+\delta\theta)$ from $\pi(\mathbf{z}\vert\theta)$, defined as
+\begin{align}
+D(\theta+\delta\theta\Vert\theta)&=\int\pi(\mathbf{z}\vert\theta+\delta\theta)\log\frac{\pi(\mathbf{z}\vert\theta+\delta\theta)}{\pi(\mathbf{z}\vert\theta)}\,d\mathbf{z} \\\\ &=\mathbb{E}\_{\theta+\delta\theta}\big[\log\pi(\mathbf{z}\vert\theta+\delta)-\log\pi(\mathbf{z}\vert\theta)\big]\label{eq:ng.1}
+\end{align}
+As $\delta\theta\to 0$, or consider the Taylor expansion of \eqref{eq:ng.1} about $\delta\theta=0$, we have
+\begin{align}
+&\hspace{-1cm}D(\theta+\delta\theta\Vert\theta)\nonumber \\\\ &=\mathbb{E}\_{\theta+\delta\theta}\big[\log\pi(\mathbf{z}\vert\theta+\delta)-\log\pi(\mathbf{z}\vert\theta)\big] \\\\ &\approx\mathbb{E}\_{\theta+\delta\theta}\left[\log\pi(\mathbf{z}\vert\theta)+\delta\theta^\text{T}\frac{\nabla_\theta\pi(\mathbf{z}\vert\theta)}{\pi(\mathbf{z}\vert\theta)}-\frac{1}{2}\delta\theta^\text{T}\frac{\nabla_\theta\pi(\mathbf{z}\vert\theta)\nabla_\theta\pi(\mathbf{z}\vert\theta)^\text{T}}{\pi(\mathbf{z}\vert\theta)^2}\delta\theta-\log\pi(\mathbf{z}\vert\theta)\right] \\\\ &=\mathbb{E}\_{\theta+\delta\theta}\left[\delta\theta^\text{T}\nabla_\theta\log\pi(\mathbf{z}\vert\theta)-\frac{1}{2}\delta\theta^\text{T}\nabla_\theta\log\pi(\mathbf{z}\vert\theta)\nabla_\theta\log\pi(\mathbf{z}\vert\theta)^\text{T}\delta\theta\right] \\\\ &=
 \end{align}
 
+
+
+
+## Fitness shaping
+{: #fn-shp}
 
 ## References
 {: #references}
